<resources>
    <string name="app_name">Text Easy</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Text Easy</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="about_us">About us</string>
    <string name="other_apps">Other apps</string>
    <string name="text_to_speech">Text to speech</string>
    <string name="translate">Translate</string>
    <string name="speech_to_text">Speech to text</string>
    <string name="rate_us">Rate us</string>
    <string name="smart_text_to_speech">Smart text to speech</string>
    <string name="about">About</string>
</resources>
