<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_text_to_speech"
            android:icon="@drawable/ic_text_fields_black_24dp"
            android:title="@string/text_to_speech" />
        <item
            android:id="@+id/nav_translate"
            android:icon="@drawable/ic_translate_black_24dp"
            android:title="@string/translate" />
        <item
            android:id="@+id/nav_speech_to_text"
            android:icon="@drawable/ic_mic_black_24dp"
            android:title="@string/speech_to_text" />
        <item
            android:id="@+id/nav_smartTts"
            android:title="@string/smart_text_to_speech"
            android:icon="@drawable/ic_speaker_phone_black_24dp"
            app:actionLayout="@layout/switch_item"
            app:showAsAction="always" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_other_apps"
                android:title="@string/other_apps"
                android:icon="@drawable/ic_business_black_24dp"/>
            <item
                android:id="@+id/nav_rate_us"
                android:icon="@drawable/ic_rate_review_black_24dp"
                android:title="@string/rate_us" />
        </menu>
    </item>


</menu>
